@@ -67,7 +67,7 @@ static inline proc_waiter_t *proc_waiter_dequeue (zbar_processor_t *proc)
         waiter = prev->next;
     else
         waiter = proc->wait_head;
-    while(waiter && waiter->events) {
+    while(waiter && (waiter->events & EVENTS_PENDING)) {
         prev = waiter;
         proc->wait_next = waiter;
         waiter = waiter->next;
@@ -145,7 +145,8 @@ void _zbar_processor_notify (zbar_processor_t *proc,
     proc->wait_next = NULL;
     proc_waiter_t *waiter;
     for(waiter = proc->wait_head; waiter; waiter = waiter->next)
-        waiter->events &= ~events;
+        waiter->events = ((waiter->events & ~events) |
+                          (events & EVENT_CANCELED));
 
     if(!proc->lock_level) {
         waiter = proc_waiter_dequeue(proc);
@@ -162,7 +163,7 @@ static inline int proc_wait_unthreaded (zbar_processor_t *proc,
     _zbar_mutex_unlock(&proc->mutex);
 
     int rc = 1;
-    while(rc > 0 && waiter->events) {
+    while(rc > 0 && (waiter->events & EVENTS_PENDING)) {
         /* FIXME lax w/the locking (though shouldn't matter...) */
         if(blocking) {
             zbar_image_t *img = zbar_video_next_image(proc->video);
@@ -193,7 +194,7 @@ int _zbar_processor_wait (zbar_processor_t *proc,
     _zbar_mutex_lock(&proc->mutex);
     int save_level = proc->lock_level;
     proc_waiter_t *waiter = proc_waiter_queue(proc);
-    waiter->events = events;
+    waiter->events = events & EVENTS_PENDING;
 
     _zbar_processor_unlock(proc, 1);
     int rc;
@@ -205,6 +206,7 @@ int _zbar_processor_wait (zbar_processor_t *proc,
     if(rc <= 0 || !proc->threaded) {
         /* reacquire api lock */
         waiter->events = 0;
+        proc->wait_next = NULL;
         if(!proc->lock_level) {
             proc_waiter_t *w = proc_waiter_dequeue(proc);
             assert(w == waiter);
@@ -212,6 +214,8 @@ int _zbar_processor_wait (zbar_processor_t *proc,
         else
             _zbar_event_wait(&waiter->notify, &proc->mutex, NULL);
     }
+    if(rc > 0 && (waiter->events & EVENT_CANCELED))
+        rc = -1;
 
     assert(proc->lock_level == 1);
     assert(_zbar_thread_is_self(proc->lock_owner));
